fix collapsed crumbs

--- a/css/inner/navbar.less
+++ b/css/inner/navbar.less
@@ -88,6 +88,10 @@
     ul.nav {
       display: inline-block;
       vertical-align: top;
+      > li {
+        height: @navbarHeight;
+        line-height: @navbarHeight;
+      }
       &.crumbs {
         li {
           a {
